--- a/Resources/stylesheet.css
+++ b/Resources/stylesheet.css
@@ -1,7 +1,7 @@
 body{
   background-color:white;
-  font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier;
-  letter-spacing:1px;
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing:2px;
   font-size:14px;
   width:100%;
   height:100%;
@@ -43,7 +43,7 @@ p,h1,h2,h3,h4,h5,h6,button{
   position:relative;
   width:160px;
   height:160px;
-  background-color:#eee8d5;
+  background-color:#e6e6e6;
   left:0px;
   right:0px;
   margin-left:auto;
@@ -61,15 +61,15 @@ p,h1,h2,h3,h4,h5,h6,button{
   transform:translate(-50%,-50%);
 }
 #Page .page_container input{
-  background-color:#eee8d5;
+  background-color:#e6e6e6;
   display:block;
   width:350px;
   height:40px;
   margin-top:20px;
   padding:0px 10px;
-  color:#521624;
-  font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier;
-  letter-spacing: 1px;
+  color:#2a3f54;
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing: 2px;
   font-weight:bold;
   font-size:14px;
   outline:none;
@@ -80,7 +80,7 @@ p,h1,h2,h3,h4,h5,h6,button{
 }
 #Page .page_container input:focus{
   border:2px solid black;
-  box-shadow: inset 2px 2px 6px rgba(0,0,0,.35);
+  box-shadow: inset 2px 2px 6px rgba(0,0,0,.15);
 }
 #Page .page_container .button_wrapper{
   margin-top:30px;
@@ -91,12 +91,12 @@ p,h1,h2,h3,h4,h5,h6,button{
 #Page .page_container .button_wrapper >a{
   width:45%;
   height:40px;
-  color:#eee8d5;
+  color:#e6e6e6;
 }
 #Page .page_container .button_wrapper button{
   width:100%;
   height:100%;
-  background-color:#521624;
+  background-color:#2a3f54;
   font-weight:bold;
   font-family:inherit;
   letter-spacing: inherit;
@@ -106,7 +106,7 @@ p,h1,h2,h3,h4,h5,h6,button{
   margin:0;
 }
 #Page .page_container .button_wrapper button:hover{
-  background-color:#3c101a;
+  background-color:#172b46;
   cursor: pointer;
 }
 #Page .page_container .underBox{
@@ -121,11 +121,11 @@ p,h1,h2,h3,h4,h5,h6,button{
   top:60px;
   text-align:center;
   opacity:0.75;
-  color:#eee8d5;
+  color:#e6e6e6;
   font-weight:bold;
   font-size:18px;
   letter-spacing: 1px;
-  background-color:rgba(0,0,0,0.5);
+  background-color:rgba(42, 63, 84, 0.75);
 }
 #Page .page_container .underBox .content p{
   margin-top:2.5px;
@@ -169,43 +169,40 @@ p,h1,h2,h3,h4,h5,h6,button{
   flex: 0 1 60px;
   height:60px;
   width:100%;
-  border-right: 2px solid black;
-  background-color:#1D4452;
+  border-right: 2px solid #172b46;
+  background-color:#2a3f54;
   z-index:4;
 }
 #Nav_bar{
   flex: 1 1 auto;
   width:275px;
   height:calc(100%-120px);
-  border-right:2px solid black;
-  background-color:#1D4452;
+  border-right:2px solid #172b46;
+  background-color:#2a3f54;
   z-index:3;
-  box-shadow: 3px 0px 10px rgba(0,0,0,0.5);
 }
 #Tool_bar{
   flex: 0 1 60px;
   width:275px;
   height:60px;
-  background-color:#521624;
-  border-right:2px solid black;
-  z-index:3;
-  box-shadow: 3px 0px 10px rgba(0,0,0,0.5);
+  background-color:#172b46;
+  border-right:2px solid #172b46;
+  z-index:5;
 }
 #Top_bar{
   position:relative;
   flex: 0 1 60px;
   height:60px;
   width:100%;
-  border-bottom:2px solid black;
+  border-bottom:2px solid #bfbfbf;
   display:flex;
   flex-flow: row;
-  background-color:#521624;
+  background-color:#d9d9d9;
   z-index:3;
-  box-shadow: 0px 3px 10px rgba(0,0,0,0.5);
 }
 #Content{
   flex: 1 1 auto;
-  background-color:#eee8d5;
+  background-color:#e6e6e6;
   z-index:2;
 }
 #Top_bar >.left_panel{
@@ -221,7 +218,7 @@ p,h1,h2,h3,h4,h5,h6,button{
 #Top_bar >.middle_panel p{
   position:absolute;
   width:100%;
-  color:#eee8d5;
+  color:#1bbc9b;
   font-weight: bold;
   font-size:14px;
   top:50%;
@@ -245,33 +242,25 @@ p,h1,h2,h3,h4,h5,h6,button{
   margin-right:15px;
   padding-bottom:14px;
   cursor: pointer;
-  opacity:0.8;
+  opacity:0.5;
 }
 #Tool_bar img:hover{
   opacity:1;
-  background-color:#3c101a;
 }
 #Logo_container{
   flex:0 1 60px;
+  width:100%;
   height:60px;
-  background-color:#1D4452;
-  z-index:3;
-  border-right:2px solid black;
+  background-color:#2a3f54;
+  z-index:5;
+  border-right:2px solid #142f38;
 }
 #Logo_container .wrapper{
   position:relative;
   height:100%;
 }
-#Logo_container img{
-  display:inline-block;
-  height:100%;
-}
 #Logo_container .logo{
-  width:60%;
-}
-#Logo_container .pointer{
-  float:right;
-  width:30%;
+  height:100%;
 }
 #Profile_Toast{
   display:flex;
@@ -310,21 +299,21 @@ p,h1,h2,h3,h4,h5,h6,button{
 #Profile_Toast img{
   width:32px;
   height:32px;
-  border:2px solid #eee8d5;
+  border:2px solid #e6e6e6;
   border-radius:50%;
 }
 #Profile_Toast .status_square{
   width:10px;
   height:10px;
   border:1px solid black;
-  background-color:green;
+  background-color:#1bbc9b;
 }
 #Profile_Toast .right_panel p{
   position:absolute;
   padding-left:10px;
   top:50%;
   transform:translate(0%,-50%);
-  color:#eee8d5;
+  color:#e6e6e6;
   font-weight:bold;
   font-size:16px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.35);
