--- a/Resources/stylesheet.css
+++ b/Resources/stylesheet.css
@@ -14,7 +14,9 @@ p,h1,h2,h3,h4,h5,h6,button{
   margin:0;
   padding:0;
 }
-
+a{
+  text-decoration: none;
+}
 #Page button:focus, #Page input:focus {
   outline:0;
 }
@@ -84,7 +86,6 @@ p,h1,h2,h3,h4,h5,h6,button{
 }
 #Page .page_container .button_wrapper{
   margin-top:30px;
-  width:calc(100%-4px);
   margin-left:2px;
   margin-right:2px;
 }
@@ -151,7 +152,13 @@ p,h1,h2,h3,h4,h5,h6,button{
 }
 #Frame >.left_panel{
   position:relative;
-  flex: 0 1 275px;
+  width:275px;
+  height:100%;
+  overflow:hidden;
+}
+#Frame >.left_panel >.absolute_wrapper{
+  position:absolute;
+  right:0;
   display:flex;
   flex-flow: column;
   width:275px;
@@ -162,28 +169,38 @@ p,h1,h2,h3,h4,h5,h6,button{
   flex: 1 1 auto;
   display:flex;
   flex-flow: column;
-  width:calc(100%-275px);
   height:100%;
 }
 #Profile_container{
   flex: 0 1 60px;
   height:60px;
   width:100%;
+  padding-top:10%;
+  padding-bottom:10%;
   border-right: 2px solid #172b46;
   background-color:#2a3f54;
   z-index:4;
 }
 #Nav_bar{
   flex: 1 1 auto;
-  width:275px;
-  height:calc(100%-120px);
+  width:100%;
   border-right:2px solid #172b46;
   background-color:#2a3f54;
+  overflow-y:scroll;
   z-index:3;
+}
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb {
+    background-color:#172b46;
 }
 #Tool_bar{
   flex: 0 1 60px;
-  width:275px;
+  width:100%;
   height:60px;
   background-color:#172b46;
   border-right:2px solid #172b46;
@@ -208,6 +225,18 @@ p,h1,h2,h3,h4,h5,h6,button{
 #Top_bar >.left_panel{
   flex: 0 1 auto;
   height:100%;
+  margin-left:20px;
+}
+#Top_bar >.left_panel img{
+  position:absolute;
+  top:50%;
+  transform:translate(0%,-50%);
+  cursor:pointer;
+  opacity:0.75;
+  z-index:3;
+}
+#Top_bar >.left_panel img:hover{
+  opacity:1;
 }
 #Top_bar >.middle_panel{
   position:relative;
@@ -257,7 +286,7 @@ p,h1,h2,h3,h4,h5,h6,button{
 }
 #Logo_container .wrapper{
   position:relative;
-  height:100%;
+  width:100%;
 }
 #Logo_container .logo{
   height:100%;
@@ -318,14 +347,21 @@ p,h1,h2,h3,h4,h5,h6,button{
   font-size:16px;
   text-shadow: 2px 2px 4px rgba(0,0,0,0.35);
 }
+#Nav_bar p{
+  padding-left:20%;
+  color:#e6e6e6;
+  font-weight:bold;
+}
+#Nav_bar .container{
+}
 #Nav_bar .navItem{
   display:flex;
   flex-flow: row;
   position:relative;
   width:90%;
   height:50px;
-  margin-left:5%;
-  margin-right:5%;
+  padding-left:5%;
+  padding-right:5%;
 }
 #Nav_bar .navItem >div{
   height:100%;
@@ -341,11 +377,41 @@ p,h1,h2,h3,h4,h5,h6,button{
   flex: 0 1 22px;
   width:22px;
 }
-#Nav_bar .navItem >div .wrapper{
+#Nav_bar .wrapper{
   position:absolute;
   top:50%;
   transform:translate(0,-50%);
 }
 #Nav_bar .navItem p{
   padding-left:10%;
+  font-size:16px;
+}
+#Nav_bar .navItem .pointer{
+  -ms-transform-origin: 50% 50%;
+  -webkit-transform-origin: 50% 50%;
+  transform-origin: 50% 50%;
+}
+#Nav_bar .navItemDropdown{
+  width:85%;
+  display:none;
+}
+#Nav_bar .navItemDropdown .navItemChild{
+  display:flex;
+  flex-flow: row;
+  position:relative;
+  width:100%;
+  height:30px;
+  padding-left:10%;
+  padding-right:5%;
+}
+#Nav_bar .navItemDropdown img{
+  opacity:0.85;
+  height:100%;
+}
+#Nav_bar .navItemDropdown p{
+  font-size:14px;
+}
+#Nav_bar .navItem:hover,#Nav_bar .navItemChild:hover{
+  background:#334d66;
+  cursor:pointer;
 }
